Added comm AWS and ESP32

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:uno]
-platform = atmelavr
-board = uno
+platform = espressif32
+board = esp32dev
 framework = arduino
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.0.4
